--- a/app/public/modules/core/views/header.client.view.html
+++ b/app/public/modules/core/views/header.client.view.html
@@ -1,13 +1,14 @@
-<div class="container" data-ng-controller="HeaderController">
-	<div class="navbar-header">
-		<button class="navbar-toggle" type="button" data-ng-click="toggleCollapsibleMenu()">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-		<a href="/#!/" class="navbar-brand">MEAN.JS</a>
+<div data-ng-controller="HeaderController">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<button class="pull-left" type="button" ng-click="toggleSidebar()">
+				<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+			</button>
+			<a href="/#!/" class="navbar-brand">MIH</a>
+		</div>
 	</div>
+
+	<!--
 	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
 		<ul class="nav navbar-nav" data-ng-if="menu.shouldRender(authentication.user);">
 			<li data-ng-repeat="item in menu.items | orderBy: 'position'" data-ng-if="item.shouldRender(authentication.user);" ng-switch="item.menuItemType" ui-route="{{item.uiRoute}}" class="{{item.menuItemClass}}" ng-class="{active: ($uiRoute)}" dropdown="item.menuItemType === 'dropdown'">
@@ -54,5 +55,5 @@
 				</ul>
 			</li>
 		</ul>
-	</nav>
+	</nav>-->
 </div>
