--- a/app/public/modules/core/views/header.client.view.html
+++ b/app/public/modules/core/views/header.client.view.html
@@ -6,6 +6,12 @@
 			</button>
 			<a href="/#!/" class="navbar-brand">MIH</a>
 		</div>
+
+		<div class="pull-right">
+			<a href="#!/signin">Signin</a>
+			<br />
+			<a href="/auth/signout">Signout</a>
+		</div>
 	</div>
 
 	<!--
