--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -33,6 +33,14 @@ body {
 	width: 300px;
 }
 
+.main-view-container {
+	height: 100%;
+
+	> section {
+		height: 100%;
+	}
+}
+
 .main-content {
 	height: 100%;
 	overflow: hidden;
