Create Header bar

--- a/app/app/views/layout.server.view.html
+++ b/app/app/views/layout.server.view.html
@@ -56,7 +56,7 @@
 		<div class="container-wrapper">
 			<header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-default"></header>
 
-			<div class="content">
+			<div class="content container-fluid">
 				{% block content %}{% endblock %}
 			</div>
 		</div>
