--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -1,23 +1,40 @@
+@import "public/modules/core/less/variables";
+
 .undecorated-link:hover {
 	text-decoration: none;
 }
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
 	display: none !important;
 }
-.ng-invalid.ng-dirty {
-	border-color: #FA787E;
-}
-.ng-valid.ng-dirty {
-	border-color: #78FA89;
-}
+
 .browsehappy.jumbotron.hide,
-body.ng-cloak
-{
+body.ng-cloak {
 	display: block;
 }
 
 body {
 	background: #fff;
+}
+
+a {
+  color: @link-color;
+}
+
+.page-wrapper {
+  height: 100%;
+}
+
+.btn {
+  background-image: none;
+}
+
+.only-mobile {
+  display: none;
+
+  @media @mobile-display {
+	display: block;
+  }
 }
 
 .left-sidebar {
