--- a/app/public/modules/core/css/core.css
+++ b/app/public/modules/core/css/core.css
@@ -55,13 +55,64 @@ body {
   background: #F0F0F0;
   border-bottom: 1px solid;
   border-radius: 0;
+  height: 70px;
+  z-index: 2;
 }
 .main-content .container-wrapper > .content {
   position: absolute;
-  top: 50px;
+  top: 70px;
   bottom: 0;
   left: 0;
   right: 0;
   overflow: auto;
   background: #fff;
+}
+.navbar-header:before,
+.notification-menu:before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  min-height: 70px;
+}
+.notification-menu {
+  float: right;
+  min-height: 70px;
+  margin: 0 20px 0 0;
+}
+.menu-btn {
+  display: inline-block;
+  vertical-align: middle;
+  cursor: pointer;
+  font-size: 1.5em;
+}
+.page-title {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 0 0 15px;
+  line-height: 20px;
+}
+.calendar-btn {
+  cursor: pointer;
+  font-size: 2em;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 15px 0 0;
+}
+.notification-icon {
+  position: relative;
+  display: inline-block;
+  font-size: 2em;
+  vertical-align: middle;
+  padding-top: 5px;
+  margin: 0 25px 0 0;
+  cursor: pointer;
+}
+.nav-user-profile {
+  display: inline-block;
+  vertical-align: middle;
+}
+.notification-icon .badge {
+  position: absolute;
+  top: 0;
+  right: -5px;
 }
