--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -81,6 +81,7 @@ body {
 .notification-menu{
   float: right;
   min-height: 70px;
+  margin: 0 20px 0 0;
 }
 .menu-btn {
   display: inline-block;
@@ -123,15 +124,4 @@ body {
   position: absolute;
   top:0;
   right:-5px;
-}
-
-.avatar-frame {
-  border: 2px solid #c7b89e;
-}
-
-.avatar-frame,.avatar-frame img {
-  width: 50px;
-  height: 50px;
-  -webkit-border-radius: 30px;
-  border-radius: 30px;
 }
