--- a/app/public/modules/core/css/core.css
+++ b/app/public/modules/core/css/core.css
@@ -67,6 +67,18 @@ body {
   overflow: auto;
   background: #fff;
 }
+.navbar-header > .page-title {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 0 0 15px;
+  line-height: 20px;
+}
+.navbar-header > .menu-btn {
+  display: inline-block;
+  vertical-align: middle;
+  cursor: pointer;
+  font-size: 1.5em;
+}
 .navbar-header:before,
 .notification-menu:before {
   content: "";
@@ -79,26 +91,14 @@ body {
   min-height: 70px;
   margin: 0 20px 0 0;
 }
-.menu-btn {
-  display: inline-block;
-  vertical-align: middle;
-  cursor: pointer;
-  font-size: 1.5em;
-}
-.page-title {
-  display: inline-block;
-  vertical-align: middle;
-  margin: 0 0 0 15px;
-  line-height: 20px;
-}
-.calendar-btn {
+.notification-menu > .calendar-btn {
   cursor: pointer;
   font-size: 2em;
   display: inline-block;
   vertical-align: middle;
   margin: 0 15px 0 0;
 }
-.notification-icon {
+.notification-menu .notification-icon {
   position: relative;
   display: inline-block;
   font-size: 2em;
@@ -107,12 +107,19 @@ body {
   margin: 0 25px 0 0;
   cursor: pointer;
 }
-.nav-user-profile {
-  display: inline-block;
-  vertical-align: middle;
-}
-.notification-icon .badge {
+.notification-menu .notification-icon > .badge {
   position: absolute;
   top: 0;
   right: -5px;
+}
+.notification-menu .nav-user-profile {
+  display: inline-block;
+  vertical-align: middle;
+}
+.notification-menu .nav-user-profile > .dropdown-toggle {
+  color: #676a6c;
+  font-size: 16px;
+}
+.notification-menu .nav-user-profile > .dropdown-menu a {
+  font-size: 14px;
 }
