--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -1,18 +1,21 @@
 .undecorated-link:hover {
 	text-decoration: none;
 }
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
 	display: none !important;
 }
+
 .ng-invalid.ng-dirty {
 	border-color: #FA787E;
 }
+
 .ng-valid.ng-dirty {
 	border-color: #78FA89;
 }
+
 .browsehappy.jumbotron.hide,
-body.ng-cloak
-{
+body.ng-cloak {
 	display: block;
 }
 
@@ -55,8 +58,8 @@ body {
 			background: #F0F0F0;
 			border-bottom: 1px solid;
 			border-radius: 0;
-		    height:70px;
-		    z-index: 2;
+			height: 70px;
+			z-index: 2;
 		}
 
 		> .content {
@@ -71,57 +74,70 @@ body {
 	}
 }
 
+.navbar-header {
+	> .page-title {
+		display: inline-block;
+		vertical-align: middle;
+		margin: 0 0 0 15px;
+		line-height: 20px;
+	}
+	> .menu-btn {
+		display: inline-block;
+		vertical-align: middle;
+		cursor: pointer;
+		font-size: 1.5em;
+	}
+
+}
+
 .navbar-header:before,
 .notification-menu:before {
-  content: "";
-  display: inline-block;
-  vertical-align: middle;
-  min-height: 70px;
-}
-.notification-menu{
-  float: right;
-  min-height: 70px;
-  margin: 0 20px 0 0;
-}
-.menu-btn {
-  display: inline-block;
-  vertical-align: middle;
-  cursor: pointer;
-  font-size: 1.5em;
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	min-height: 70px;
 }
 
-.page-title {
-  display: inline-block;
-  vertical-align: middle;
-  margin:0 0 0 15px;
-  line-height: 20px;
-}
+.notification-menu {
+	float: right;
+	min-height: 70px;
+	margin: 0 20px 0 0;
 
-.calendar-btn {
-  cursor: pointer;
-  font-size: 2em;
-  display: inline-block;
-  vertical-align: middle;
-  margin: 0 15px 0 0;
-}
+	> .calendar-btn {
+		cursor: pointer;
+		font-size: 2em;
+		display: inline-block;
+		vertical-align: middle;
+		margin: 0 15px 0 0;
+	}
 
-.notification-icon {
-  position: relative;
-  display: inline-block;
-  font-size: 2em;
-  vertical-align: middle;
-  padding-top: 5px;
-  margin: 0 25px 0 0;
-  cursor: pointer;
-}
+	.notification-icon {
+		position: relative;
+		display: inline-block;
+		font-size: 2em;
+		vertical-align: middle;
+		padding-top: 5px;
+		margin: 0 25px 0 0;
+		cursor: pointer;
 
-.nav-user-profile {
-  display: inline-block;
-  vertical-align: middle;
-}
+		> .badge {
+			position: absolute;
+			top: 0;
+			right: -5px;
+		}
+	}
 
-.notification-icon .badge {
-  position: absolute;
-  top:0;
-  right:-5px;
+	.nav-user-profile {
+		display: inline-block;
+		vertical-align: middle;
+
+		> .dropdown-toggle {
+			color: #676a6c;
+			font-size: 16px;
+		}
+
+		> .dropdown-menu a {
+			font-size: 14px;
+		}
+	}
 }
