Create Header bar

--- a/app/public/modules/core/views/header.client.view.html
+++ b/app/public/modules/core/views/header.client.view.html
@@ -13,11 +13,12 @@
 
 			<div class="dropdown nav-user-profile">
 				<a class="dropdown-toggle" type="button" data-toggle="dropdown">Username
-					<img src="https://cdn1.iconfinder.com/data/icons/mix-color-4/502/Untitled-1-48.png" class="profile-image img-circle">
+					<img src="https://cdn1.iconfinder.com/data/icons/mix-color-4/502/Untitled-1-48.png"
+						 class="profile-image img-circle">
 					<span class="caret"></span></a>
 				<ul class="dropdown-menu">
-					<li><a href="#">Settings</a></li>
-					<li><a href="#">Logout</a></li>
+					<li><a href="#" ng-click="goToUserSettings()" >Settings</a></li>
+					<li><a href="#" ng-click="logOut()">Logout</a></li>
 				</ul>
 			</div>
 		</div>
