--- a/app/public/modules/users/css/authentication.css
+++ b/app/public/modules/users/css/authentication.css
@@ -62,6 +62,11 @@
   text-align: center;
   font-size: 1.5em;
 }
+@media only screen and (max-width: 667px) {
+  .intro-section {
+    display: none;
+  }
+}
 .app-logo {
   width: 100%;
   min-height: 120px;
