Create Forgot password page

--- a/app/public/modules/users/views/password/forgot-password.client.view.html
+++ b/app/public/modules/users/views/password/forgot-password.client.view.html
@@ -2,9 +2,9 @@
 	<div class="row">
 		<aside class="col-sm-4 col-xs-12 auth-aside animated fadeInLeft">
 			<div class="auth-form">
-				<h3 class="col-md-12 text-center">Forgot password</h3>
+				<h2 class="auth-title">Forgot password</h2>
 				<form data-ng-submit="askForPasswordReset()" class="signin form-horizontal" autocomplete="off">
-					<fieldset>
+					<fieldset class="forgot-reset-pass">
 						<div class="form-group">
 							<label for="username">User name</label>
 							<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
