--- a/app/public/modules/users/views/authentication/signin.client.view.html
+++ b/app/public/modules/users/views/authentication/signin.client.view.html
@@ -1,96 +1,45 @@
-<!--<section class="row" data-ng-controller="AuthenticationController">-->
-<!--<h3 class="col-md-12 text-center">Sign in using your social accounts</h3>-->
-<!--<div class="col-md-12 text-center">-->
-<!--<a href="/auth/facebook" class="undecorated-link">-->
-<!--<img src="/modules/users/img/buttons/facebook.png">-->
-<!--</a>-->
-<!--<a href="/auth/twitter" class="undecorated-link">-->
-<!--<img src="/modules/users/img/buttons/twitter.png">-->
-<!--</a>-->
-<!--<a href="/auth/google" class="undecorated-link">-->
-<!--<img src="/modules/users/img/buttons/google.png">-->
-<!--</a>-->
-<!--<a href="/auth/linkedin" class="undecorated-link">-->
-<!--<img src="/modules/users/img/buttons/linkedin.png">-->
-<!--</a>-->
-<!--<a href="/auth/github" class="undecorated-link">-->
-<!--<img src="/modules/users/img/buttons/github.png">-->
-<!--</a>-->
-<!--</div>-->
-<!--<h3 class="col-md-12 text-center">Or with your account</h3>-->
-<!--<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">-->
-<!--<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">-->
-<!--<fieldset>-->
-<!--<div class="form-group">-->
-<!--<label for="username">Username</label>-->
-<!--<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">-->
-<!--</div>-->
-<!--<div class="form-group">-->
-<!--<label for="password">Password</label>-->
-<!--<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">-->
-<!--</div>-->
-<!--<div class="text-center form-group">-->
-<!--<button type="submit" class="btn btn-primary">Sign in</button>&nbsp; or&nbsp;-->
-<!--<a href="/#!/signup">Sign up</a>-->
-<!--</div>-->
-<!--<div class="forgot-password">-->
-<!--<a href="/#!/password/forgot">Forgot your password?</a>-->
-<!--</div>-->
-<!--<div data-ng-show="error" class="text-center text-danger">-->
-<!--<strong data-ng-bind="error"></strong>-->
-<!--</div>-->
-<!--</fieldset>-->
-<!--</form>-->
-<!--</div>-->
-<!--</section>-->
-
-<section class="container-fluid auth-page" data-ng-controller="AuthenticationController">
-	<div class="row">
-		<aside class="col-sm-4 col-xs-12 auth-aside animated fadeInLeft">
-			<div class="auth-form">
-				<h1 class="app-logo only-mobile">Make It Happen</h1>
-				<h2 class="auth-title">Sign in</h2>
-				<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
-					<fieldset>
-						<div class="form-group">
-							<label for="email">Email</label>
-							<input type="text" id="email" name="email" class="form-control"
-								   data-ng-model="credentials.email" placeholder="Email">
-						</div>
-						<div class="form-group">
-							<label for="password">Password</label>
-							<input type="password" id="password" name="password" class="form-control"
-								   data-ng-model="credentials.password" placeholder="Password">
-						</div>
-						<div class="form-group">
-							<button type="submit" class="btn btn-primary btn-block">Sign in</button>
-						</div>
-						<div class="form-group forgot-password text-center">
-							<a href="/#!/password/forgot">Forgot your password?</a>
-						</div>
-						<div class="form-group">
-							<a href="/#!/signup" class="btn btn-primary btn-block">Create an account</a>
-						</div>
-						<div data-ng-show="error" class="text-center text-danger">
-							<strong data-ng-bind="error"></strong>
-						</div>
-					</fieldset>
-				</form>
-			</div>
-
-		</aside>
-		<div class="col-sm-8 intro-section">
-			<div class="row intro-block">
-				<div class="col-sm-offset-3 col-sm-6">
-					<h1 class="app-logo">Make It Happen</h1>
-					<p class="intro-desc">Hello there! If you see this logo you are on the right way to making your life easier and
-						more organized. Just run application and create your own schedule. We would happy to help you
-						with choosing free time slots and estimations. See you on the next page ;)</p>
-				</div>
-
-			</div>
-		</div>
+<section class="row" data-ng-controller="AuthenticationController">
+	<h3 class="col-md-12 text-center">Sign in using your social accounts</h3>
+	<div class="col-md-12 text-center">
+		<a href="/auth/facebook" class="undecorated-link">
+			<img src="/modules/users/img/buttons/facebook.png">
+		</a>
+		<a href="/auth/twitter" class="undecorated-link">
+			<img src="/modules/users/img/buttons/twitter.png">
+		</a>
+		<a href="/auth/google" class="undecorated-link">
+			<img src="/modules/users/img/buttons/google.png">
+		</a>
+		<a href="/auth/linkedin" class="undecorated-link">
+			<img src="/modules/users/img/buttons/linkedin.png">
+		</a>
+		<a href="/auth/github" class="undecorated-link">
+			<img src="/modules/users/img/buttons/github.png">
+		</a>
 	</div>
-
-
+	<h3 class="col-md-12 text-center">Or with your account</h3>
+	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
+		<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
+			<fieldset>
+				<div class="form-group">
+					<label for="username">Username</label>
+					<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
+				</div>
+				<div class="form-group">
+					<label for="password">Password</label>
+					<input type="password" id="password" name="password" class="form-control" data-ng-model="credentials.password" placeholder="Password">
+				</div>
+				<div class="text-center form-group">
+					<button type="submit" class="btn btn-primary">Sign in</button>&nbsp; or&nbsp;
+					<a href="/#!/signup">Sign up</a>
+				</div>
+				<div class="forgot-password">
+					<a href="/#!/password/forgot">Forgot your password?</a>
+				</div>
+				<div data-ng-show="error" class="text-center text-danger">
+					<strong data-ng-bind="error"></strong>
+				</div>
+			</fieldset>
+		</form>
+	</div>
 </section>
