Create Forgot password page

--- a/app/public/modules/core/views/header.client.view.html
+++ b/app/public/modules/core/views/header.client.view.html
@@ -13,7 +13,7 @@
 
 				<div class="dropdown nav-user-profile">
 					<a class="dropdown-toggle" type="button" data-toggle="dropdown">Username
-						<img src="modules\core\img\userAvatar.png"
+						<img src="modules\core\img\default-user-avatar.png"
 							 class="profile-image img-circle">
 						<span class="caret"></span></a>
 					<ul class="dropdown-menu">
