Create Forgot password page

--- a/app/public/modules/core/views/header.client.view.html
+++ b/app/public/modules/core/views/header.client.view.html
@@ -1,4 +1,4 @@
-<header data-ng-controller="HeaderController" data-ng-show="authentication.user" class="navbar navbar-default">
+<div data-ng-controller="HeaderController" data-ng-show="authentication.user" class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<span class="menu-btn glyphicon glyphicon-menu-hamburger" data-ng-click="toggleSidebar()" aria-hidden="true"></span>
@@ -23,5 +23,5 @@
 				</div>
 			</div>
 		</div>
-</header>
+</div>
 
