--- a/app/app/views/layout.server.view.html
+++ b/app/app/views/layout.server.view.html
@@ -36,55 +36,43 @@
 
 	<!--Application CSS Files-->
 	{% for cssFile in cssFiles %}
-		<link rel="stylesheet" href="{{cssFile}}">
+	<link rel="stylesheet" href="{{cssFile}}">
 	{% endfor %}
 
 	<!-- HTML5 Shim -->
 	<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 </head>
 
 <body class="ng-cloak">
-	<aside class="left-sidebar">
-		<section>
-			Sidebar module №1
-		</section>
-	</aside>
+<div class="main-view-container">
+	{% block content %}{% endblock %}
+</div>
 
-	<section class="main-content" ng-controller="MainController as main" ng-class="{'with-sidebar': main.withSidebar}">
-		<div class="container-wrapper">
-			<header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-default"></header>
+<!--Embedding The User Object-->
+<script type="text/javascript">
+	var user = {{ user | json | safe }};
+</script>
 
-			<div class="content container-fluid">
-				{% block content %}{% endblock %}
-			</div>
-		</div>
-	</section>
+<!--Application JavaScript Files-->
+{% for jsFile in jsFiles %}
+<script type="text/javascript" src="{{jsFile}}"></script>
+{% endfor %}
 
-	<!--Embedding The User Object-->
-	<script type="text/javascript">
-		var user = {{ user | json | safe }};
-	</script>
+{% if process.env.NODE_ENV === 'development' %}
+<!--Livereload script rendered -->
+<script type="text/javascript" src="http://{{request.hostname}}:35729/livereload.js"></script>
+{% endif %}
 
-	<!--Application JavaScript Files-->
-	{% for jsFile in jsFiles %}
-		<script type="text/javascript" src="{{jsFile}}"></script>
-	{% endfor %}
-
-	{% if process.env.NODE_ENV === 'development' %}
-		<!--Livereload script rendered -->
-		<script type="text/javascript" src="http://{{request.hostname}}:35729/livereload.js"></script>
-	{% endif %}
-
-	<!--[if lt IE 9]>
-	<section class="browsehappy jumbotron hide">
-		<h1>Hello there!</h1>
-		<p>You are using an old browser which we unfortunately do not support.</p>
-		<p>Please <a href="http://browsehappy.com/">click here</a> to update your browser before using the website.</p>
-		<p><a href="http://browsehappy.com" class="btn btn-primary btn-lg" role="button">Yes, upgrade my browser!</a></p>
-	</section>
-	<![endif]-->
+<!--[if lt IE 9]>
+<section class="browsehappy jumbotron hide">
+	<h1>Hello there!</h1>
+	<p>You are using an old browser which we unfortunately do not support.</p>
+	<p>Please <a href="http://browsehappy.com/">click here</a> to update your browser before using the website.</p>
+	<p><a href="http://browsehappy.com" class="btn btn-primary btn-lg" role="button">Yes, upgrade my browser!</a></p>
+</section>
+<![endif]-->
 </body>
 
 </html>
