--- a/app/public/modules/users/css/authentication.css
+++ b/app/public/modules/users/css/authentication.css
@@ -78,3 +78,8 @@
   background: url('/modules/users/img/logo-lg-dark.png') no-repeat;
   background-size: contain;
 }
+
+.auth-page .popover {
+	white-space: nowrap;
+	max-width: none;
+}
