--- a/app/app/views/index.server.view.html
+++ b/app/app/views/index.server.view.html
@@ -1,5 +1,23 @@
 {% extends 'layout.server.view.html' %}
-
 {% block content %}
-	<section data-ui-view class="page-wrapper"></section>
+{% if user %}
+<section class="page-wrapper">
+	<aside class="left-sidebar">
+		<section data-ng-include="'/modules/tasks/views/list-tasks.client.view.html'">
+		</section>
+	</aside>
+
+	<section class="main-content" ng-controller="HomeController as home" ng-class="{'with-sidebar': home.withSidebar}">
+		<div class="container-wrapper">
+			<header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-default"></header>
+
+			<div class="content">
+				<div data-ui-view></div>
+			</div>
+		</div>
+	</section>
+</section>
+{% else %}
+<section data-ui-view class="page-wrapper"></section>
+{% endif %}
 {% endblock %}
