--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -6,16 +6,14 @@
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
 	display: none !important;
 }
-<<<<<<< HEAD
 
-=======
 .ng-invalid.ng-dirty {
 	border-color: #FA787E;
 }
 .ng-valid.ng-dirty {
 	border-color: #78FA89;
 }
->>>>>>> 0b7c63faf02de277bc34891d8750ca1b85c74854
+
 .browsehappy.jumbotron.hide,
 body.ng-cloak {
 	display: block;
@@ -66,12 +64,12 @@ a {
 .main-content {
 	height: 100%;
 	overflow: hidden;
-	transition: padding .6s;
+	transition: margin .6s;
 	position: relative;
 	z-index: 2;
 
 	&.with-sidebar {
-		padding-left: 300px;
+		margin-left: 300px;
 	}
 
 	.container-wrapper {
