Forgot pass page fix.

--- a/app/public/modules/users/views/password/forgot-password.client.view.html
+++ b/app/public/modules/users/views/password/forgot-password.client.view.html
@@ -6,8 +6,8 @@
 				<form data-ng-submit="askForPasswordReset()" class="signin form-horizontal" autocomplete="off">
 					<fieldset class="forgot-reset-pass">
 						<div class="form-group">
-							<label for="username">User name</label>
-							<input type="text" id="username" name="username" class="form-control" data-ng-model="credentials.username" placeholder="Username">
+							<label for="email">User email</label>
+							<input type="text" id="email" name="email" class="form-control" data-ng-model="credentials.email" placeholder="Email">
 						</div>
 						<div class="text-center form-group">
 							<button type="submit" class="btn btn-primary">Submit</button>
