--- a/app/app/views/index.server.view.html
+++ b/app/app/views/index.server.view.html
@@ -18,6 +18,24 @@
 	</section>
 </section>
 {% else %}
-<section data-ui-view class="page-wrapper"></section>
+<section class="page-wrapper">
+	<section class="container-fluid auth-page">
+		<div class="row">
+			<aside class="col-sm-4 col-xs-12 auth-aside animated fadeInLeft">
+				<div class="auth-form" data-ui-view></div>
+			</aside>
+			<div class="col-sm-8 intro-section">
+				<div class="row intro-block">
+					<div class="col-sm-offset-3 col-sm-6">
+						<h1 class="app-logo">Make It Happen</h1>
+						<p class="intro-desc">Hello there! If you see this logo you are on the right way to making your life easier and
+							more organized. Just run application and create your own schedule. We would happy to help you
+							with choosing free time slots and estimations. See you on the next page ;)</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+</section>
 {% endif %}
 {% endblock %}
