--- a/app/public/modules/users/views/authentication/signin.client.view.html
+++ b/app/public/modules/users/views/authentication/signin.client.view.html
@@ -1,57 +1,36 @@
-<section class="container-fluid auth-page" data-ng-controller="AuthenticationController">
-	<div class="row">
-		<aside class="col-sm-4 col-xs-12 auth-aside animated fadeInLeft">
-			<div class="auth-form">
-				<h1 class="app-logo only-mobile">Make It Happen</h1>
-				<h2 class="auth-title">Sign in</h2>
-				<form name="signinForm" data-ng-submit="signin(signinForm.$valid)" class="signin form-horizontal" autocomplete="off" novalidate>
-					<fieldset>
-						<div class="form-group" ng-class="{'has-error': signinForm.submitted && signinForm.email.$invalid || signinForm.email.$dirty && signinForm.email.$invalid}">
-							<label for="email" class="control-label">Email</label>
-							<input type="email" id="email" name="email" class="form-control"
-								   data-ng-model="credentials.email" placeholder="Email" required>
-						  <div ng-show="signinForm.submitted || signinForm.email.$dirty" class="error-message">
-									<p ng-show="signinForm.email.$error.required" class="help-block error-text">Please enter your email</p>
-									<p ng-show="signinForm.email.$error.email" class="help-block error-text">Please enter a valid email</p>
-    				  </div>
-						</div>
-						<div class="form-group" ng-class="{'has-error': signinForm.submitted && signinForm.password.$invalid}">
-							<label for="password" class="control-label">Password</label>
-							<input type="password" id="password" name="password" class="form-control"
-								   data-ng-model="credentials.password" placeholder="Password" required>
-							 <div ng-show="signinForm.submitted" class="error-message">
-									<p ng-show="signinForm.password.$error.required" class="help-block error-text">Please enter a password</p>
-							</div>
-						</div>
-						<div class="form-group">
-							<button type="submit" class="btn btn-primary btn-block">Sign in</button>
-						</div>
-						<div class="form-group forgot-password text-center">
-							<a href="/#!/password/forgot">Forgot your password?</a>
-						</div>
-						<div class="form-group">
-							<a href="/#!/signup" class="btn btn-primary btn-block">Create an account</a>
-						</div>
-						<div data-ng-show="error" class="text-center text-danger">
-							<strong data-ng-bind="error"></strong>
-						</div>
-					</fieldset>
-				</form>
-			</div>
-
-		</aside>
-		<div class="col-sm-8 intro-section">
-			<div class="row intro-block">
-				<div class="col-sm-offset-3 col-sm-6">
-					<h1 class="app-logo">Make It Happen</h1>
-					<p class="intro-desc">Hello there! If you see this logo you are on the right way to making your life easier and
-						more organized. Just run application and create your own schedule. We would happy to help you
-						with choosing free time slots and estimations. See you on the next page ;)</p>
-				</div>
-
+<h1 class="app-logo only-mobile">Make It Happen</h1>
+<h2 class="auth-title">Sign in</h2>
+<form name="signinForm" data-ng-controller="AuthenticationController" data-ng-submit="signin(signinForm.$valid)" class="signin form-horizontal" autocomplete="off" novalidate>
+	<fieldset>
+		<div class="form-group" ng-class="{'has-error': signinForm.submitted && signinForm.email.$invalid || signinForm.email.$dirty && signinForm.email.$invalid}">
+			<label for="email" class="control-label">Email</label>
+			<input type="email" id="email" name="email" class="form-control"
+				   data-ng-model="credentials.email" placeholder="Email" required>
+		  <div ng-show="signinForm.submitted || signinForm.email.$dirty" class="error-message">
+					<p ng-show="signinForm.email.$error.required" class="help-block error-text">Please enter your email</p>
+					<p ng-show="signinForm.email.$error.email" class="help-block error-text">Please enter a valid email</p>
+	  </div>
+		</div>
+		<div class="form-group" ng-class="{'has-error': signinForm.submitted && signinForm.password.$invalid}">
+			<label for="password" class="control-label">Password</label>
+			<input type="password" id="password" name="password" class="form-control"
+				   data-ng-model="credentials.password" placeholder="Password" required>
+			 <div ng-show="signinForm.submitted" class="error-message">
+					<p ng-show="signinForm.password.$error.required" class="help-block error-text">Please enter a password</p>
 			</div>
 		</div>
-	</div>
+		<div class="form-group">
+			<button type="submit" class="btn btn-primary btn-block">Sign in</button>
+		</div>
+		<div class="form-group forgot-password text-center">
+			<a href="/#!/password/forgot">Forgot your password?</a>
+		</div>
+		<div class="form-group">
+			<a href="/#!/signup" class="btn btn-primary btn-block">Create an account</a>
+		</div>
+		<div data-ng-show="error" class="text-center text-danger">
+			<strong data-ng-bind="error"></strong>
+		</div>
+	</fieldset>
+</form>
 
-
-</section>
