--- a/app/public/modules/users/views/password/reset-password.client.view.html
+++ b/app/public/modules/users/views/password/reset-password.client.view.html
@@ -1,40 +1,23 @@
-<section class="container-fluid auth-page" data-ng-controller="PasswordController">
-	<div class="row">
-		<aside class="col-sm-4 col-xs-12 auth-aside animated fadeInLeft">
-			<div class="auth-form">
-				<h2 class="auth-title">Reset your password</h2>
-				<form data-ng-submit="resetUserPassword()" class="signin form-horizontal" autocomplete="off">
-					<fieldset class="forgot-reset-pass">
-						<div class="form-group">
-							<label for="newPassword">New Password</label>
-							<input type="password" id="newPassword" name="newPassword" class="form-control" data-ng-model="passwordDetails.newPassword" placeholder="New Password">
-						</div>
-						<div class="form-group">
-							<label for="verifyPassword">Verify Password</label>
-							<input type="password" id="verifyPassword" name="verifyPassword" class="form-control" data-ng-model="passwordDetails.verifyPassword" placeholder="Verify Password">
-						</div>
-						<div class="text-center form-group">
-							<button type="submit" class="btn btn-large btn-primary">Update Password</button>
-						</div>
-						<div data-ng-show="error" class="text-center text-danger">
-							<strong>{{error}}</strong>
-						</div>
-						<div data-ng-show="success" class="text-center text-success">
-							<strong>{{success}}</strong>
-						</div>
-					</fieldset>
-				</form>
-			</div>
-		</aside>
-		<div class="col-sm-8 intro-section">
-			<div class="row intro-block">
-				<div class="col-sm-offset-3 col-sm-6">
-					<h1 class="app-logo">Make It Happen</h1>
-					<p class="intro-desc">Hello there! If you see this logo you are on the right way to making your life easier and
-						more organized. Just run application and create your own schedule. We would happy to help you
-						with choosing free time slots and estimations. See you on the next page ;)</p>
-				</div>
-			</div>
+<h2 class="auth-title">Reset your password</h2>
+<form data-ng-submit="resetUserPassword()" class="signin form-horizontal" autocomplete="off" data-ng-controller="PasswordController">
+	<fieldset class="forgot-reset-pass">
+		<div class="form-group">
+			<label for="newPassword">New Password</label>
+			<input type="password" id="newPassword" name="newPassword" class="form-control" data-ng-model="passwordDetails.newPassword" placeholder="New Password">
 		</div>
-	</div>
-</section>
+		<div class="form-group">
+			<label for="verifyPassword">Verify Password</label>
+			<input type="password" id="verifyPassword" name="verifyPassword" class="form-control" data-ng-model="passwordDetails.verifyPassword" placeholder="Verify Password">
+		</div>
+		<div class="text-center form-group">
+			<button type="submit" class="btn btn-large btn-primary">Update Password</button>
+		</div>
+		<div data-ng-show="error" class="text-center text-danger">
+			<strong>{{error}}</strong>
+		</div>
+		<div data-ng-show="success" class="text-center text-success">
+			<strong>{{success}}</strong>
+		</div>
+	</fieldset>
+</form>
+
