--- a/app/public/modules/users/less/authentication.less
+++ b/app/public/modules/users/less/authentication.less
@@ -84,3 +84,39 @@
 	background-size: contain;
   }
 }
+
+.auth-page {
+  .popover {
+	white-space: nowrap;
+	max-width: none;
+	margin-left: 10px;
+
+	&:after, &:before {
+	  right: 100%;
+	  top: 26px;
+	  border: solid transparent;
+	  content: " ";
+	  height: 0;
+	  width: 0;
+	  position: absolute;
+	}
+
+	&:after {
+	  border-color: rgba(255, 255, 255, 0);
+	  border-right-color: #ffffff;
+	  border-width: 10px;
+	  margin-top: -20px;
+	}
+
+	&:before {
+	  border-color: rgba(204, 204, 204, 0);
+	  border-right-color: #303030;
+	  border-width: 10px;
+	  margin-top: -20px;
+	}
+
+	.error-popover-title.text-navy {
+	  margin : 0;
+	}
+  }
+}
