--- a/app/public/modules/users/views/password/forgot-password.client.view.html
+++ b/app/public/modules/users/views/password/forgot-password.client.view.html
@@ -3,7 +3,7 @@
 <form  data-ng-controller="PasswordController" data-ng-submit="askForPasswordReset()" class="signin form-horizontal" autocomplete="off">
 	<fieldset class="forgot-reset-pass">
 		<div class="form-group">
-			<label for="email">User name</label>
+			<label for="email">User email</label>
 			<input type="text" id="email" name="email" class="form-control" data-ng-model="credentials.email" placeholder="Email">
 		</div>
 		<div class="text-center form-group">
