--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -1,11 +1,67 @@
-<section data-ng-controller="TasksController">
-    <div class="page-header">
-        <h1>New Task</h1>
-    </div>
+<section class="create-task-wrapper" data-ng-controller="TasksController">
     <div class="col-md-12">
         <form class="form-horizontal" data-ng-submit="create()" novalidate>
             <fieldset>
-                <div class="form-group">
+
+				<div class="row">
+					<div class="col-xs-6 col-sm-3">
+						<div class="form-group">
+							<label class="control-label" for="name">Title*</label>
+							<input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
+						</div>
+						<div class="btn-group" data-toggle="buttons">
+							<h5>Type</h5>
+							<label>
+								<input type="radio" name="inputWalls" id="inputWalls" value="Task" checked>
+								Task
+							</label>
+							<label>
+								<input type="radio" name="inputWalls" id="inputWalls" value="Event">
+								Event
+							</label>
+						</div>
+					</div>
+					<div class="col-xs-6 col-sm-3">
+						<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+						<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+						<script>
+							$(function() {
+								$( "#from" ).datepicker({
+									defaultDate: "+1w",
+									changeMonth: true,
+									numberOfMonths: 3,
+									onClose: function( selectedDate ) {
+										$( "#to" ).datepicker( "option", "minDate", selectedDate );
+									}
+								});
+								$( "#to" ).datepicker({
+									defaultDate: "+1w",
+									changeMonth: true,
+									numberOfMonths: 3,
+									onClose: function( selectedDate ) {
+										$( "#from" ).datepicker( "option", "maxDate", selectedDate );
+									}
+								});
+							});
+						</script>
+						<label for="from">From</label>
+						<input type="text" id="from" name="from">
+						<label for="to">to</label>
+						<input type="text" id="to" name="to">
+					</div>
+
+					<!-- Add the extra clearfix for only the required viewport -->
+					<div class="clearfix visible-xs-block"></div>
+
+					<div class="col-xs-6 col-sm-3">
+
+					</div>
+					<div class="col-xs-6 col-sm-3">  <input type="submit" class="btn btn-default"> </div>
+				</div>
+
+
+
+               <!-- <div class="form-group">
                     <label class="control-label" for="name">Name</label>
                     <div class="controls">
                         <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
@@ -13,7 +69,7 @@
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btn btn-default">
-                </div>
+                </div>-->
 				<div data-ng-show="error" class="text-danger">
 					<strong data-ng-bind="error"></strong>
 				</div>
