--- a/app/public/modules/tasks/less/createTask.less
+++ b/app/public/modules/tasks/less/createTask.less
@@ -3,7 +3,83 @@
 .create-task-wrapper{
 	background: #eee;
 	border: 1px solid #c6c6c6;
-	margin: 5px 10px;
+	margin: 5px 10px -40px;
 	padding: 10px 25px;
-	overflow: hidden;
+
+	.col-xs-6 {
+		min-height: 300px;
+		position: relative;
+	}
+
+	.column-wrapper {
+		margin:0 40px;
+
+	}
+
+	.label-padding {
+		margin-bottom:10px;
+	}
+
+	input[type='text'], .input-round-borders, .notes-area {
+		border-radius: 5px;
+		border: 1px solid #838383;
+	}
+
+	.calendar-btn {
+		border-radius: 5px 0 0 5px;
+		border: 1px solid #838383;
+		border-right:none;
+		cursor: pointer;
+	}
+
+	.calendar-input {
+		border-radius: 0 5px 5px 0!important;
+	}
+
+	.btn-holder {
+		text-align: right;
+	}
+
+	.btn-white{
+		background: #fff;
+		border: 1px solid #838383;
+		color: #333;
+	}
+
+	.notes-area{
+		height:150px;
+	}
+
+	.rz-limit:last-child {
+		left:auto!important;
+		right:0!important;
+	}
+
+	.slots-table {
+		border: 1px solid #838383;
+		td {
+			text-align: center;
+		}
+	}
+
+	.ui-datepicker .btn {
+		background: #fff;
+		color:#333;
+	}
+	.ui-datepicker .btn.active {
+		background: #f8f8f8;
+		color:#000;
+	}
+	.pool-bottom {
+		position: absolute;
+		bottom: 10px;
+	}
+	.pool-left {
+		left: 50px;
+	}
+	.pool-right {
+		right: 70px;
+	}
 }
+
+
