--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -1,79 +1,143 @@
-<section class="create-task-wrapper" data-ng-controller="TasksController">
-    <div class="col-md-12">
-        <form class="form-horizontal" data-ng-submit="create()" novalidate>
-            <fieldset>
+<section class="create-task-wrapper clearfix" data-ng-controller="TasksController">
+	<div class="col-md-12">
+		<form class="form-horizontal"  novalidate>
+			<fieldset>
 
 				<div class="row">
 					<div class="col-xs-6 col-sm-3">
-						<div class="form-group">
-							<label class="control-label" for="name">Title*</label>
-							<input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
-						</div>
-						<div class="btn-group" data-toggle="buttons">
-							<h5>Type</h5>
-							<label>
-								<input type="radio" name="inputWalls" id="inputWalls" value="Task" checked>
-								Task
-							</label>
-							<label>
-								<input type="radio" name="inputWalls" id="inputWalls" value="Event">
-								Event
-							</label>
+						<div class="column-wrapper">
+							<div class="form-group">
+								<label class="control-label label-padding" for="title">Title*</label>
+								<input type="text" data-ng-model="title" id="title" class="form-control input-round-borders" placeholder="Title"
+									   required>
+							</div>
+							<div class="form-group">
+								<div class="btn-group">
+									<h5><b>Type</b></h5>
+									<div class="col-md-6">
+										<label class="radio-inline">
+											<input type="radio"  name="type" data-ng-model="type" value="task">Task
+										</label>
+									</div>
+									<div class="col-md-6">
+										<label class="radio-inline">
+											<input type="radio" name="type" data-ng-model="type" value="event">Event
+										</label>
+									</div>
+								</div>
+							</div>
+							<div class="form-group pool-bottom pool-left">
+								<button class="btn btn-default btn-white">Save as draft</button>
+							</div>
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-3">
-						<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-						<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-						<script>
-							$(function() {
-								$( "#from" ).datepicker({
-									defaultDate: "+1w",
-									changeMonth: true,
-									numberOfMonths: 3,
-									onClose: function( selectedDate ) {
-										$( "#to" ).datepicker( "option", "minDate", selectedDate );
-									}
-								});
-								$( "#to" ).datepicker({
-									defaultDate: "+1w",
-									changeMonth: true,
-									numberOfMonths: 3,
-									onClose: function( selectedDate ) {
-										$( "#from" ).datepicker( "option", "maxDate", selectedDate );
-									}
-								});
-							});
-						</script>
-						<label for="from">From</label>
-						<input type="text" id="from" name="from">
-						<label for="to">to</label>
-						<input type="text" id="to" name="to">
+						<div class="column-wrapper">
+							<div class="form-group">
+								<label class="control-label label-padding" for="srartDate">Start date</label>
+								<div class="input-group ui-datepicker">
+									<span class="input-group-addon calendar-btn" ng-click="openStart($event)">
+										<i class="fa fa-calendar"></i>
+									</span>
+
+									<input id="srartDate" type="text" class="form-control input-round-borders calendar-input" datepicker-popup="dd.MM.yyyy"
+										   ng-model="dt.srartDate" is-open="opened.srartDate" min="minDate" max="'2015-06-22'"
+										   datepicker-options="dateOptions.srartDate" date-disabled="disabled(date, mode)"
+										   ng-required="true" close-text="Close"
+										   ng-click="openStart($event)" required/>
+
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="control-label label-padding" for="endDate">End date</label>
+								<div class="input-group ui-datepicker">
+									<span class="input-group-addon calendar-btn" ng-click="openEnd($event)">
+										<i class="fa fa-calendar"></i>
+									</span>
+
+									<input id="endDate" type="text" class="form-control input-round-borders calendar-input" datepicker-popup="dd.MM.yyyy"
+										   ng-model="dt.endDate" is-open="opened.endDate" min="minDate" max="'2015-06-22'"
+										   datepicker-options="dateOptions.endDate" date-disabled="disabled(date, mode)"
+										   ng-required="true" close-text="Close"
+										   ng-click="openEnd($event)" required/>
+
+								</div>
+							</div>
+							<div class="form-group">
+								<input type="checkbox"  data-ng-model="withOutDate" id="withOutDate" placeholder="Name"
+									   required>
+								<label class="control-label" for="withOutDate">Task without date</label>
+
+							</div>
+							<div class="form-group">
+								<label class="control-label" for="withOutDate">Estimation</label>
+								<div>
+									<rzslider rz-slider-model="slider.value"
+											  rz-slider-options="slider.options">
+									</rzslider>
+								</div>
+							</div>
+						</div>
 					</div>
 
 					<!-- Add the extra clearfix for only the required viewport -->
 					<div class="clearfix visible-xs-block"></div>
 
 					<div class="col-xs-6 col-sm-3">
-
+						<div class="column-wrapper">
+							<div class="form-group">
+								<label class="control-label label-padding" for="tags">Tags</label>
+								<input type="text" data-ng-model="tags" id="tags" class="form-control input-round-borders" placeholder="Add tags"
+									   disabled>
+							</div>
+							<div class="form-group">
+								<label class="control-label label-padding" for="tags">Notes</label>
+								<textarea class="form-control notes-area" data-ng-model="notes"></textarea>
+							</div>
+						</div>
 					</div>
-					<div class="col-xs-6 col-sm-3">  <input type="submit" class="btn btn-default"> </div>
+					<div class="col-xs-6 col-sm-3">
+						<div class="column-wrapper">
+							<label class="control-label label-padding">Slots</label>
+							<table class="table table-bordered slots-table">
+								<tr>
+									<td>Monday 22.02</td>
+									<td>16.00-20.00</td>
+									<td>4h</td>
+								</tr>
+								<tr>
+									<td>Tuesday 23.02</td>
+									<td>10.00-14.00</td>
+									<td>4h</td>
+								</tr>
+								<tr>
+									<td>Wednesday 24.02 </td>
+									<td>10.00-14.00</td>
+									<td>4h</td>
+								</tr>
+							</table>
+							<div class="form-group btn-holder pool-bottom pool-right">
+								<button class="btn btn-default btn-white">Cancel</button>
+								<input type="submit" data-ng-click="create()" class="btn btn-default btn-white">
+							</div>
+						</div>
+					</div>
 				</div>
 
 
-
-               <!-- <div class="form-group">
-                    <label class="control-label" for="name">Name</label>
-                    <div class="controls">
-                        <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <input type="submit" class="btn btn-default">
-                </div>-->
+				<!-- <div class="form-group">
+                     <label class="control-label" for="name">Name</label>
+                     <div class="controls">
+                         <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
+                     </div>
+                 </div>
+                 <div class="form-group">
+                     <input type="submit" class="btn btn-default">
+                 </div>-->
 				<div data-ng-show="error" class="text-danger">
 					<strong data-ng-bind="error"></strong>
 				</div>
-            </fieldset>
-        </form>
-    </div>
+			</fieldset>
+		</form>
+	</div>
 </section>
