--- a/app/public/modules/tasks/views/view-task.client.view.html
+++ b/app/public/modules/tasks/views/view-task.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="TasksController" data-ng-init="findOne()">
 	<div class="page-header">
-		<h1 data-ng-bind="task.name"></h1>
+		<h1 data-ng-bind="task.title"></h1>
 	</div>
 	<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == task.user._id))">
 		<a class="btn btn-primary" href="/#!/tasks/{{task._id}}/edit">
